# sentry

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.toml  config.toml.example  policy.toml  tauri.conf.json
.github/workflows/: ci.yml  release.yml
eir-proto/: Cargo.toml
eir-proto/src/: lib.rs
eir-svc/: Cargo.toml
eir-svc/src/: audit.rs  config.rs  explain.rs  main.rs  models.rs  pipe_server.rs  safety.rs
eir-svc/src/ai/: client.rs  prompt.rs
eir-svc/src/executor/: driver.rs  logs.rs  mod.rs  powershell.rs  registry.rs  security.rs  services.rs  software.rs
eir-svc/src/feedback/: mod.rs
eir-svc/src/learn/: apply.rs  detect.rs  mod.rs  store.rs
eir-svc/src/policy/: mod.rs
eir-svc/src/signals/: file_watch.rs  log_parser.rs  wmi.rs
eir-svc/src/updater/: check.rs  config.rs  diagnose.rs  domain.rs  download.rs  history.rs  mod.rs  names.rs  orchestrator.rs  plan.rs  proc.rs  verify.rs  version.rs  winget_parse.rs
eir-svc/src/updater/methods/: choco.rs  mod.rs  msstore.rs  scoop.rs  winget.rs
eir-ui/: Cargo.toml  build-svc.ps1  installer-hooks.nsh  tauri.conf.json
eir-ui/src/: main.rs  pipe_client.rs  updates.rs
icons/: gen-icon.ps1
migrations/: 0003_feedback.sql  0005_usage.sql  0006_pending_approvals.sql  0007_update_history.sql  0008_learned_facts.sql  0009_approval_rejections.sql
sentry-proto/: Cargo.toml
sentry-proto/src/: lib.rs
sentry-svc/: Cargo.toml
sentry-svc/src/: audit.rs  config.rs  main.rs  models.rs  pipe_server.rs  safety.rs
sentry-svc/src/ai/: client.rs  prompt.rs
sentry-svc/src/executor/: boot.rs  powershell.rs  process.rs  services.rs  tasks.rs
sentry-svc/src/feedback/: mod.rs
sentry-svc/src/policy/: mod.rs
sentry-svc/src/signals/: event_log.rs  file_watch.rs  mod.rs  wmi.rs
sentry-ui/: Cargo.toml  build-svc.ps1  installer-hooks.nsh  tauri.conf.json
sentry-ui/src/: main.rs  pipe_client.rs  updates.rs
src/: audit.rs  main.rs  models.rs  safety.rs
src/ai/: client.rs
src/approval/: mod.rs
src/executor/: boot.rs  driver.rs  mod.rs  process.rs  software.rs
src/feedback/: mod.rs
src/policy/: mod.rs
src/signals/: file_watch.rs  log_parser.rs
ui/: index.html  main.js
