[package]
name = "eir-ui"
version = "0.6.4"
edition = "2021"
authors = ["Swatto <claude.ai@swatto.co.uk>"]
description = "Eir system monitor — tray UI"
license = "MIT"

[[bin]]
name = "eir"
path = "src/main.rs"

[dependencies]
eir-proto = { path = "../eir-proto" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
